Fix z-index error

--- a/sass/yofisio/components/blog-grid.sass
+++ b/sass/yofisio/components/blog-grid.sass
@@ -114,3 +114,4 @@ div[aria-label="Page Navigation"]
   background: -webkit-linear-gradient(top, rgba($brand-info,0.9) 0%,rgba($brand-info,0.6) 50%,rgba($brand-info,0.5) 100%)
   background: linear-gradient(to bottom, rgba($brand-info,0.9) 0%,rgba($brand-info,0.6) 50%,rgba($brand-info,0.5) 100%)
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2288caE6', endColorstr='#2288ca80',GradientType=0 )
+  z-index: 0!important
